# bt747cli

./: .gitignore  README.md  pyproject.toml
bt747cli/: __init__.py  cli.py  connection.py  filter.py  gpx.py  parser.py  protocol.py
tests/: test_connection.py  test_filter.py  test_gpx.py  test_parser.py  test_protocol.py
